variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: illegal start of simple pattern
var Nb Int : = 0
           ^RunFour:2: error: '=' expected but ';' found.
while (Nb != 4) {
^